<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
        <relativePath/>
    </parent>

    <groupId>eu.gaiax.difs.fc</groupId>
    <artifactId>fc-service</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>

    <name>fc-service</name>
    <description>GAIA-X Federated Catalogue Service</description>
    <organization>
        <name>T-Systems International GmbH</name>
    </organization>

    <modules>
        <module>fc-service-api</module>
        <module>fc-service-client</module>
        <module>fc-service-core</module>
        <module>fc-service-server</module>
        <module>demo-portal</module>
    </modules>

    <properties>
        <!-- java -->
        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <!-- charset -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- dependencies -->
        <spring.version>5.3.20</spring.version>
        <spring-boot.version>2.7.0</spring-boot.version>
        <spring.security.version>5.7.2</spring.security.version>
        <security.test-addons.version>3.0.1</security.test-addons.version>
        <springdoc.version>1.6.8</springdoc.version>
        <lombok.version>1.18.22</lombok.version>
        <keycloak.version>17.0.1</keycloak.version>
        <micrometer.version>1.9.0</micrometer.version>
        <embedded.postgres.version>2.0.1</embedded.postgres.version>
        <embedded.postgres.test.version>2.1.2</embedded.postgres.test.version>
        <jsonld.version>0.13.4</jsonld.version>
        <!-- plugins -->
        <plugin.jib.version>3.2.1</plugin.jib.version>
        <plugin.openapi-generator.version>5.4.0</plugin.openapi-generator.version>
        <plugin.maven-compiler.version>3.8.1</plugin.maven-compiler.version>
        <plugin.checkstyle.version>3.1.2</plugin.checkstyle.version>
        <plugin.checkstyle.puppycrawl.version>10.3.1</plugin.checkstyle.puppycrawl.version>
        <!-- repoositiry path -->
        <repository.path>gaia-x/data-infrastructure-federation-services/cat/fc-service</repository.path>
        <!--jib-->
        <ci-registry>${env.CI_REGISTRY}/${repository.path}</ci-registry>
    </properties>

    <url>https://gitlab.com/${repository.path}</url>
    <scm>
        <url>https://gitlab.com/${repository.path}</url>
    </scm>
    <issueManagement>
        <url>https://gitlab.com/${repository.path}/-/issues</url>
    </issueManagement>
    <ciManagement>
        <url>https://gitlab.com/${repository.path}/-/pipelines</url>
    </ciManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>eu.gaiax.difs.fc</groupId>
                <artifactId>fc-service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.gaiax.difs.fc</groupId>
                <artifactId>fc-service-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.gaiax.difs.fc</groupId>
                <artifactId>fc-service-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-oauth2-client</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-web</artifactId>
                <version>${spring.security.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <scope>provided</scope>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-registry-prometheus</artifactId>
                <version>${micrometer.version}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-admin-client</artifactId>
                <version>${keycloak.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.c4-soft.springaddons</groupId>
                <artifactId>spring-security-oauth2-test-addons</artifactId>
                <version>${security.test-addons.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.zonky.test</groupId>
                <artifactId>embedded-postgres</artifactId>
                <version>${embedded.postgres.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.zonky.test</groupId>
                <artifactId>embedded-database-spring-test</artifactId>
                <version>${embedded.postgres.test.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${plugin.checkstyle.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${plugin.checkstyle.puppycrawl.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${plugin.maven-compiler.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${plugin.openapi-generator.version}</version>
                    <configuration>
                        <generateApiTests>false</generateApiTests>
                        <generateModelTests>false</generateModelTests>
                        <generateApiDocumentation>false</generateApiDocumentation>
                        <generateModelDocumentation>false</generateModelDocumentation>
                        <configOptions>
                            <serializableModel>true</serializableModel>
                            <oas3>true</oas3>
                            <useSpringfox>false</useSpringfox>
                        </configOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${plugin.jib.version}</version>
                    <configuration>
                        <!-- Turn it off for all the modules, but
                            turn it on in server module only -->
                        <skip>true</skip>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
